--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/pablo/RayTracerWorkspace/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/pablo/RayTracerWorkspace/junit-4.13.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/pablo/JavaLibraries/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/pablo/JavaLibraries/junit-4.13.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
